[gd_scene load_steps=7 format=2]

[ext_resource path="res://CharacterMenu.gd" type="Script" id=1]
[ext_resource path="res://Crosshair.tscn" type="PackedScene" id=2]
[ext_resource path="res://vignette.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D vignette;

void fragment() {
	vec3 vignette_color = texture(vignette, UV).rgb;
	// Screen texture stores gaussian blurred copies on mipmaps
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, (1.0 - vignette_color.b) * 1.0).rgb;
	COLOR.rgb *= texture(vignette, UV).rgb;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/vignette = ExtResource( 3 )

[node name="CharacterMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="Crosshair" parent="." instance=ExtResource( 2 )]

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -140.0
margin_right = 210.0
margin_bottom = 140.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CrosshairTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CrosshairTimer" to="." method="_on_CrosshairTimer_timeout"]
